RESOLVED FIXED97865
[EFL][WK2] NetworkInfo provider is not initialized in Ewk_Context
https://bugs.webkit.org/show_bug.cgi?id=97865
Summary [EFL][WK2] NetworkInfo provider is not initialized in Ewk_Context
Chris Dumez
Reported 2012-09-27 23:05:03 PDT
We need to initialize the NetworkInfo provider in Ewk_Context, with the other providers. It is currently missing.
Attachments
Patch (1.95 KB, patch)
2012-09-27 23:07 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-27 23:07:02 PDT
WebKit Review Bot
Comment 2 2012-09-28 02:24:32 PDT
Comment on attachment 166146 [details] Patch Clearing flags on attachment: 166146 Committed r129864: <http://trac.webkit.org/changeset/129864>
WebKit Review Bot
Comment 3 2012-09-28 02:24:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.