[EFL][WK2] NetworkInfo provider is not initialized in Ewk_Context https://bugs.webkit.org/show_bug.cgi?id=97865

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-28
Reviewed by Kenneth Rohde Christiansen.

Initialize NetworkInfo provider for EFL port in Ewk_Context
with the other providers.

* UIProcess/API/efl/ewk_context.cpp:
(_Ewk_Context):
(_Ewk_Context::_Ewk_Context):

Canonical link: https://commits.webkit.org/115872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129864 268f45cc-cd09-0410-ab3c-d52691b4dbfc